Dev (#18)
* update post to finance api

* update

* remove log

* Added logs to get the deductions name

* add new endpoint for pulling payroll with status

* fixing report

* Fix fetching

* clean up for merging to main

* fix index out of bound error

* update

* Analytics report fix

* update the analytics logic

* Analytics report fix

* Analytics report fix

* update analytics

* paginated analytics report controller and applied defaults

* Applied default values for dashboard data

* update

* added excel report generator service

* update the mongo config

* update admin url

* added get report headers end point

* added get report headers end point

* modified retrieve payment element payload

* update

* added retrieve summary report data

* updated "added retrieve summary report data"

added retrieve summary report data

* added retrieve summary report data

* added retrieve summary report data

* Fix for totalnet pay

* updated uuid issue

* update

* update

---------

Co-authored-by: Babatunde Alaraje <babatunde.alaraje@karsun-llc.com>
Co-authored-by: xykine-ademola-hammed <159750356+xykine-ademola-hammed@users.noreply.github.com>
Co-authored-by: oyewolemoruff <morufoye@gmail.com>