@@ -1,12 +1,20 @@
 package com.xykine.computation.service;
 
 import com.xykine.computation.entity.PayrollReportDetail;
+import com.xykine.computation.entity.PayrollReportSummary;
 import com.xykine.computation.repo.PayrollReportDetailRepo;
+import com.xykine.computation.repo.PayrollReportSummaryRepo;
 import com.xykine.computation.request.ReportRequestPayload;
+import com.xykine.computation.request.RetrievePaymentElementPayload;
+import com.xykine.computation.request.RetrieveSummaryElementRequest;
+
 import com.xykine.computation.response.GeneratedReportResponse;
 import com.xykine.computation.response.ReportResponse;
 import com.xykine.computation.utils.ReportUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+
 import org.springframework.stereotype.Service;
 import org.xykine.payroll.model.MapKeys;
 import org.xykine.payroll.model.PaymentInfo;
@@ -20,6 +28,8 @@ import java.util.*;
 public class ReportGeneratorServiceImpl implements ReportGeneratorService {
 
     private final PayrollReportDetailRepo payrollReportDetailRepo;
+    private final PayrollReportSummaryRepo payrollReportSummaryRepo;
+
     private final ExcelUploadService excelUploadService;
 
     @Override
@@ -29,7 +39,8 @@ public class ReportGeneratorServiceImpl implements ReportGeneratorService {
                 .filter(Objects::nonNull)
                 .map(ReportUtils::transform)
                 .filter(detail -> shouldIncludeEmployee(detail, reportRequestPayload))
-                .map(detail -> extractDetail(detail.getDetail().getReport(), reportRequestPayload.getSelectedReports()))
+                .map(detail -> extractDetail(detail.getDetail().getReport(), reportRequestPayload.getSelectedHeader()))
+
                 .toList();
 
         if (dataRows.isEmpty()) {
@@ -46,15 +57,83 @@ public class ReportGeneratorServiceImpl implements ReportGeneratorService {
         }
     }
 
+    @Override
+    public Set<String> getHeadersForReport(String companyId, String reportId) {
+        Pageable paging = PageRequest.of(0, 1);
+
+        return payrollReportDetailRepo
+                .findPayrollReportDetailBySummaryIdAndCompanyId(reportId, companyId, paging).stream()
+                .filter(Objects::nonNull)
+                .findFirst()
+                .map(ReportUtils::transform)
+                .map(detail -> extractRawDetail(detail.getDetail().getReport()))
+                .map(Map::keySet)
+                .orElse(Collections.emptySet());
+    }
+
+    @Override
+    public List<Map<String, Object>> retrievePaymentElementFromReport(RetrievePaymentElementPayload retrievePaymentElementPayload) {
+
+        return payrollReportDetailRepo
+                .findPayrollReportDetailBySummaryId(retrievePaymentElementPayload.getReportId()).stream()
+                .filter(Objects::nonNull)
+                .map(ReportUtils::transform)
+                .map(detail -> extractDetail(detail.getDetail().getReport(), retrievePaymentElementPayload.getSelectedHeader()))
+                .toList();
+    }
+
+    @Override
+    public Map<String, Object> extractDataFromSummary(RetrieveSummaryElementRequest request) {
+        Map<String, Object> result = new HashMap<>();
+
+        try {
+                payrollReportSummaryRepo
+                    .findPayrollReportSummaryByIdAndCompanyId(UUID.fromString(request.getReportId()), request.getCompanyId())
+                    .ifPresentOrElse(payrollReportSummary -> {
+                        ReportResponse reportResponse = ReportUtils.transform(payrollReportSummary);
+                        result.put("Total Number of Recipients", payrollReportDetailRepo.countBySummaryId(request.getReportId()));
+                        result.put(MapKeys.TOTAL_NET_PAY,
+                                reportResponse.getSummary().getSummary().getOrDefault(MapKeys.TOTAL_NET_PAY, BigDecimal.valueOf(0)));
+                    }, () -> {
+                        result.put("Total Number of Recipients", 0);
+                        result.put(MapKeys.TOTAL_NET_PAY, 0);
+                    });
+
+            return result;
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            throw new RuntimeException("Unable to get summary");
+        }
+    }
+
     private boolean shouldIncludeEmployee(ReportResponse detail, ReportRequestPayload payload) {
         return payload.isAllEmployee() || payload.getEmployeeIds().contains(detail.getEmployeeId());
     }
 
     private Map<String, Object> extractDetail(PaymentInfo paymentInfo, List<String> selectedReports) {
-        Map<String, BigDecimal> raw = new HashMap<>();
+        Map<String, Object> raw = extractRawDetail(paymentInfo);
+        Map<String, Object> result = new LinkedHashMap<>();
+
+        selectedReports.forEach(key -> {
+            if (raw.containsKey(key)) {
+                result.put(key, raw.get(key));
+            }
+        });
+
+        return result;
+    }
+
+    private Map<String, Object> extractRawDetail(PaymentInfo paymentInfo) {
+        Map<String, Object> raw = new HashMap<>();
+        raw.put("EmployeeId", paymentInfo.getEmployeeID());
+        raw.put("EmployeeName", paymentInfo.getFullName());
+        raw.put("StartDate", paymentInfo.getStartDate());
+        raw.put("EndDate", paymentInfo.getEndDate());
+        raw.put("PayrollType", paymentInfo.isOffCycle()? "OffCycle" : "Regular");
         raw.put(MapKeys.NET_PAY, paymentInfo.getNetPay());
 
-        List<Map<String, BigDecimal>> components = List.of(
+        List<Map<String, BigDecimal>> components = Arrays.asList(
+
                 paymentInfo.getDeduction(),
                 paymentInfo.getTaxRelief(),
                 paymentInfo.getGrossPay(),
@@ -64,21 +143,10 @@ public class ReportGeneratorServiceImpl implements ReportGeneratorService {
         );
 
         components.stream()
-                .filter(Objects::nonNull)
+                .filter(Objects::nonNull) // Ensure the component is not null
                 .forEach(raw::putAll);
 
-        Map<String, Object> result = new LinkedHashMap<>();
-        result.put("EmployeeId", paymentInfo.getEmployeeID());
-        result.put("FullName", paymentInfo.getFullName());
-        result.put("StartDate", paymentInfo.getStartDate());
-        result.put("EndDate", paymentInfo.getEndDate());
+        return raw;
 
-        selectedReports.forEach(key -> {
-            if (raw.containsKey(key)) {
-                result.put(key, raw.get(key));
-            }
-        });
-
-        return result;
     }
 }
